Prereqs and when classes are offered are now added to the model. printResults.html.erb now writes a webpage that displays course information

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Home</h1>
-<a href="pages/results.html">Go to results</a>
+<a href="pages/printResults.html">Go straight to results</a>
 
 <%= form_tag("/pages/refreshCourseListing", method: "get") do %>
     <%= submit_tag("Refresh Course Listing") %>
